# efl

./: comp  configure.bat  meson.build
header_checks/: meson.build
src/lib/eina/: eina_internal.h  eina_lock.h  eina_thread.c  eina_thread.h  eina_thread_posix.c  eina_thread_win32.c  eina_types.h  meson.build
src/lib/evil/unposix/: unistd.h
src/lib/evil/unposix/sys/: stat.c  stat.h
src/tests/: efl_check.h
src/tests/efl_mono/: Events.cs
src/tests/eina/: eina_suite.c  eina_suite.h  eina_test_win32_synchronization.c  meson.build
